--- a/action.yml
+++ b/action.yml
@@ -80,11 +80,13 @@ runs:
         PACK_PACKAGE_NAME=''
         PACK_PACKAGE_VERSION=''
         PACK_PROJECTS=''
-        PACK_OUTPUT=${{ runner.temp }}/.nuget/*.nupkg
+        PACK_OUTPUT=${{ runner.temp }}/.nuget
         if [ ! -z "${{ inputs.packageNameAuto }}" ]; then
             PACK_PACKAGE_NAME=-p:PackageId=${{ inputs.packageName }}
             PACK_PACKAGE_VERSION=-p:Version=${{ inputs.packageVersion }}
             PACK_OUTPUT=$PACK_OUTPUT/${{ inputs.packageName }}.${{ inputs.packageVersion }}.nupkg
+        else
+            PACK_OUTPUT=$PACK_OUTPUT/*.nupkg
         fi
         if [ ! -z "${{ inputs.projects }}" ]; then
             PACK_PROJECTS=${{ inputs.projects }}
