--- a/action.yml
+++ b/action.yml
@@ -81,7 +81,6 @@ runs:
         PACK_PACKAGE_NAME=''
         PACK_PACKAGE_VERSION=''
         PACK_PROJECTS=''
-        PACK_OUTPUT=${{ runner.temp }}/.nuget
         if [ ! -z "${{ inputs.packageNameAuto }}" ]; then
             PACK_PACKAGE_NAME="-p:PackageId=${{ inputs.packageName }}"
             PACK_PACKAGE_VERSION="-p:Version=${{ inputs.packageVersion }}"
@@ -90,15 +89,9 @@ runs:
             PACK_PROJECTS=${{ inputs.projects }}
         fi
         echo "ARTIFACT_PACKAGE_NAME=$PACKAGE_NAME.$PACKAGE_VERSION.nupkg" >> "$GITHUB_OUTPUT"
-        echo "ARTIFACT_PACKAGE_PATH=$PACK_OUTPUT" >> "$GITHUB_OUTPUT"
+        echo "ARTIFACT_PACKAGE_PATH=$PACKAGE_OUTPUT/*.nupkg" >> "$GITHUB_OUTPUT"
         # Pack
-        echo $PACKAGE_NAME
-        echo $PACKAGE_VERSION
-        echo $PACKAGE_OUTPUT
-        echo $PACK_OUTPUT
-        echo $PACK_PACKAGE_NAME
-        echo $PACK_PACKAGE_VERSION
-        dotnet pack $PACK_PACKAGE_NAME $PACK_PACKAGE_VERSION --configuration ${{ inputs.configuration }} --verbosity ${{ inputs.level }} --no-build --output $PACK_OUTPUT $PACK_PROJECTS
+        dotnet pack $PACK_PACKAGE_NAME $PACK_PACKAGE_VERSION --configuration ${{ inputs.configuration }} --verbosity ${{ inputs.level }} --no-build --output $PACKAGE_OUTPUT $PACK_PROJECTS
       shell: bash
 
     - if: inputs.uploadPackedArtifact == 'true'
